# ytstampy-daliah

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-windows.yml
gui/: app_view.py  localization.py
model/: analysis_pipeline.py  config.py  data_models.py
singing_detection/: __init__.py
singing_detection/audio/: __init__.py  feature_extraction.py  loader.py  utils.py
singing_detection/detection/: __init__.py  detection_engine.py
singing_detection/identification/: __init__.py  song_identifier.py
singing_detection/segments/: __init__.py  segment_processor.py
singing_detection/visualization/: __init__.py  plots.py
viewmodel/: analysis_viewmodel.py
