[project]
name = "ytstampy-daliah"
version = "0.1.0"
description = "Youtube Timeline Analyzer for Vtuber Utawaku"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "flet>=0.27.6",
    "flet-desktop>=0.27.6",
    "hmmlearn>=0.3.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "openai-whisper>=20240930",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "yt-dlp>=2025.3.31",
]

[dependency-groups]
dev = ["poethepoet>=0.34.0", "ruff>=0.11.7", "flet[all]==0.27.6"]

[tool.uv]

[tool.poe.tasks]
dev = "main.py"
format = "ruff format src"
lint = "ruff check --fix src"
build-windows = "flet build windows"
build-macos = "flet build macos"
build-linux = "flet build linux"

[tool.flet]
org = "com.utawaku"
product = "ytstampy-daliah"
company = "utawaku"
copyright = "MIT"


[tool.flet.app]
path = "."

[tool.flet.macos]
build_arch = "arm64"
